--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                                 <div class="carousel-inner">
                                     <div class="carousel-item active">
                                         <div class="carousel-image-wrap">
-                                            <img src="images/slide/1.jpg" class="img-fluid carousel-image" alt="">
+                                            <img src="images/slide/1.png" class="img-fluid carousel-image" alt="">
                                         </div>
                                         
                                         <div class="carousel-caption">
@@ -120,7 +120,7 @@
 
                                     <div class="carousel-item">
                                         <div class="carousel-image-wrap">
-                                            <img src="images/slide/2.jpg" class="img-fluid carousel-image" alt="">
+                                            <img src="images/slide/2.png" class="img-fluid carousel-image" alt="">
                                         </div>
                                         
                                         <div class="carousel-caption">
@@ -207,7 +207,7 @@
                         <div class="col-lg-4 col-md-6 col-12">
                             <div class="menu-thumb">
                                 <div class="menu-image-wrap">
-                                    <img src="images/mainpic/1.png" class="img-fluid menu-image" alt="">
+                                    <img src="images/mainpic/1.jpg" class="img-fluid menu-image" alt="">
 
                                     <span class="menu-tag bg-warning">200 ML</span>
                                 </div>
