--- a/menu.html
+++ b/menu.html
@@ -100,7 +100,7 @@
                         <div class="col-lg-4 col-md-6 col-12">
                             <div class="menu-thumb">
                                 <div class="menu-image-wrap">
-                                    <img src="images/mainpic/1.png" class="img-fluid menu-image" alt="">
+                                    <img src="images/mainpic/1.jpg" class="img-fluid menu-image" alt="">
 
                                     <span class="menu-tag bg-warning">200 ML</span>
                                 </div>
@@ -130,7 +130,7 @@
                         <div class="col-lg-4 col-md-6 col-12">
                             <div class="menu-thumb">
                                 <div class="menu-image-wrap">
-                                    <img src="images/mainpic/2.png" class="img-fluid menu-image" alt="">
+                                    <img src="images/mainpic/2.jpg" class="img-fluid menu-image" alt="">
 
                                     <span class="menu-tag bg-warning">500 ML</span>
                                 </div>
@@ -160,7 +160,7 @@
                         <div class="col-lg-4 col-md-6 col-12">
                             <div class="menu-thumb">
                                 <div class="menu-image-wrap">
-                                    <img src="images/mainpic/3.png" class="img-fluid menu-image" alt="">
+                                    <img src="images/mainpic/3.jpg" class="img-fluid menu-image" alt="">
 
                                     <span class="menu-tag bg-warning">1 LTR.</span>
                                 </div>
@@ -192,7 +192,7 @@
                         <div class="col-lg-4 col-md-6 col-12">
                             <div class="menu-thumb">
                                 <div class="menu-image-wrap">
-                                    <img src="images/mainpic/4.png" class="img-fluid menu-image" alt="">
+                                    <img src="images/mainpic/4.jpg" class="img-fluid menu-image" alt="">
 
                                     <span class="menu-tag bg-warning">2 LTR.</span>
                                 </div>
@@ -224,7 +224,7 @@
                         <div class="col-lg-4 col-md-6 col-12">
                             <div class="menu-thumb">
                                 <div class="menu-image-wrap">
-                                    <img src="images/mainpic/5.png" class="img-fluid menu-image" alt="">
+                                    <img src="images/mainpic/5.jpg" class="img-fluid menu-image" alt="">
 
                                     <span class="menu-tag bg-warning">5 LTR.</span>
                                 </div>
@@ -254,7 +254,7 @@
                         <div class="col-lg-4 col-md-6 col-12">
                             <div class="menu-thumb">
                                 <div class="menu-image-wrap">
-                                    <img src="images/mainpic/6.png" class="img-fluid menu-image" alt="">
+                                    <img src="images/mainpic/6.jpg" class="img-fluid menu-image" alt="">
 
                                     <span class="menu-tag bg-warning">15 LTR.</span>
                                 </div>
