--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
                                 <div class="menu-image-wrap">
                                     <img src="images/mainpic/3.jpg" class="img-fluid menu-image" alt="">
 
-                                    <span class="menu-tag bg-warning">1 LTR.</span>
+                                    <span class="menu-tag bg-warning" style="font-color:#000;">1 LTR.</span>
                                 </div>
 
                                 <div class="menu-info d-flex flex-wrap align-items-center">
