--- a/contact.html
+++ b/contact.html
@@ -103,7 +103,10 @@ https://www.tooplate.com/view/2129-crispy-kitchen
                         </div>
 
                         <div class="col-lg-6 col-12">
-                            <form class="custom-form contact-form row" action="#" method="post" role="form">
+                            <form class="custom-form contact-form row" action="https://api.web3forms.com/submit" method="post" role="form">
+                                <input type="hidden" name="access_key" value="b0674c1f-fa5a-413b- 9510-e7d6010e3bd0" />
+          <input type="hidden" name="subject" value="New Contact Form Submission from OM WEBSITES.w3group" />
+          <input type="hidden" name="from_name" value="TRIYOGI OILS" />
                                 <div class="col-lg-6 col-6">
                                     <label for="contact-name" class="form-label">Full Name</label>
 
@@ -190,7 +193,7 @@ https://www.tooplate.com/view/2129-crispy-kitchen
 
                         <p>10:00 AM - 08:00 PM</p>
 
-                        <p>Tel: <a href="tel: +916005928776" class="tel-link">6005928776 <br>7347454831</a></p>
+                        <p>Tel: <a href="tel: +919235592410" class="tel-link">9235592410 <br>7347354831</a></p>
                     </div>
 
                     <div class="col-lg-4 col-md-6 col-xs-12 tooplate-mt30">
