--- a/contact.html
+++ b/contact.html
@@ -116,7 +116,7 @@ https://www.tooplate.com/view/2129-crispy-kitchen
                                 <div class="col-lg-6 col-6">
                                     <label for="contact-phone" class="form-label">Phone Number</label>
 
-                                    <input type="telephone" name="contact-phone" id="contact-phone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" class="form-control" placeholder="123-456-7890">
+                                    <input type="telephone" name="contact-phone" id="contact-phone"  class="form-control" placeholder="123-456-7890">
                                 </div>
 
                                 <div class="col-12">
